# rp2040-gpio-fs

./: .gitignore  README.md
firmware/: CMakeLists.txt  main.c  rp2040_gpio_fs.uf2  tusb_config.h  usb_descriptors.c
linux/: install.sh
linux/config/: 99-rp2040-gpio-fs.rules  rp2040fs-keepalive  rp2040fs-keepalive.service  rp2040fs@.service
linux/fs_app/: Makefile  README.md  mount_rp2040.sh  rp2040fs.c
test/: serial_logger.sh  stress_test.sh
